2008-03-13  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* gtk/gtkprintunixdialog.c (add_custom_button_to_dialog)
	(overwrite_confirmation_dialog): added some line-breaks for
	readability.

2008-03-12  Jens Granseuer  <jensgr@gmx.net>

	Merged from trunk:

        * modules/printbackends/cups/gtkprintbackendcups.c:
        (cups_printer_prepare_for_print): Don't define variables in the
        middle of a block. (#522067)

2008-03-12  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	* gtk/gtkprintunixdialog.c: Add an overwrite confirmation
	dialog for print-to-file.  (#474302, Marek Kašík)

2008-03-12  Sebastian Dröge  <slomo@circular-chaos.org>

	Merged from trunk:

	* modules/printbackends/cups/gtkprintbackendcups.c: Include
	<glib/gstdio.h> for g_fopen().

2008-03-12  Matthias Clasen  <mclasen@redhat.com>

	Merged from tunk:

	* gtk/gtkpagesetup.c (gtk_page_setup_copy): Don't leak
	paper_size here.  (#488820, Morten Welinder)

2008-03-12  Tor Lillqvist  <tml@novell.com>

	Bug 520286 - Non-deletable window has no minimize / maximize buttons

	* gdk/win32/gdkmain-win32.c (_gdk_win32_window_style_to_string):
	New debugging output function that decodes a set of WS_* bits.

	* gdk/win32/gdkprivate-win32.h: Declare it.

	* gdk/win32/gdkwindow-win32.c (update_single_system_menu_entry):
	New function that enables or disables one menu entry in the system
	menu of a top-level window. (The corresponding decoration will
	then also be enabled or disabled (grayed).)

	(update_style_bits): Do as the comment says and don't try to
	update the window style based on the GdkWMFunctions set for the
	window.
		   
	(update_system_menu): New function that enables or disables the
	system menu entries based on a window's stored set of
	GdkWMFunctions.

	(gdk_window_set_functions): Call update_system_menu() instead of
	update_style_bits().

2008-03-12  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.12.9 ===

	* NEWS: Updates
