@@ -2,6 +2,14 @@
 
 	Merged from trunk:
 
+	* gtk/gtkfilechooserdefault.c
+	* gtk/gtkprintunixdialog.c: set alternative button order for
+	overwrite confirmation dialogs (bug #522191).
+
+2008-03-13  Sven Neumann  <sven@gimp.org>
+
+	Merged from trunk:
+
 	* gtk/gtkprintunixdialog.c (add_custom_button_to_dialog)
 	(overwrite_confirmation_dialog): added some line-breaks for
 	readability.
